Fix archive icon in collapsed left pane

--- a/stylesheets/_modules.scss
+++ b/stylesheets/_modules.scss
@@ -4436,8 +4436,6 @@ button.module-image__border-overlay:focus {
       }
 
       .module-conversation-list--width-narrow & {
-        justify-content: flex-start;
-
         &__icon {
           display: block;
           width: 48px;
